@@ -36,6 +36,8 @@ zodb-cache-size = 8000
 # Debugging
 debug = on
 
+# Log for e-mail sending
+minaraad-log-path = ${buildout:directory}/var/log
 
 [plone]
 recipe = plone.recipe.plone
@@ -93,7 +95,7 @@ zserver-threads = 3
 zodb-cache-size = ${conf:zodb-cache-size}
 environment-vars =
     PTS_LANGUAGES en, nl
-    MINARAAD_LOG_PATH ${buildout:directory}/var/log/
+    MINARAAD_LOG_PATH ${conf:minaraad-log-path}
 
 eggs =
     ${buildout:eggs}
