@@ -131,7 +131,7 @@ text =
     compress
     delaycompress
 
-    ${buildout:directory}/var/log/zeoclient*.log {
+    ${buildout:directory}/var/log/zeoclient*.log ${conf:minaraad-log-path}/minaraad_email.log {
         sharedscripts
         postrotate
             /bin/kill -USR2 $(cat ${buildout:directory}/var/zeoclient.pid)
